# Caspilot

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.base.json  vitest.config.base.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  codeql.yml
apps/adapter-doctor/: package.json
apps/adapter-doctor/src/: cli.ts
apps/adapter-doctor/test/: cli.test.ts
apps/api/: package.json  tsconfig.json
apps/api/scripts/: seed-web-demo.ts  serve-demo.ts
apps/api/src/: deps.ts  index.ts  server.ts
apps/api/test/: _stubs.ts  cors.test.ts  deps-native-policy.test.ts  deps.test.ts  healthz.test.ts  intents-build-unsigned-deploy-native.test.ts  intents-build-unsigned-deploy.test.ts  intents-confirm-onchain.test.ts  intents-create.test.ts  (+9 more)
apps/harness/: .gitignore  package.json  tsconfig.json
apps/web/: .env.example  .gitignore  next.config.mjs  package.json  tsconfig.json
contracts/policy-vault/: Cargo.toml  Odra.toml
contracts/policy-vault/src/: errors.rs  events.rs  lib.rs
contracts/policy-vault/tests/: policy_vault_abi_test.rs  policy_vault_admin_test.rs  policy_vault_cep18_test.rs  policy_vault_pay_policy_test.rs
docs/: demo-recording.md  deploy-vercel.md  development-status.md  frontend-implementation-plan.md  frontend-open-design-plan.md  live-demo-runbook.md  manual-test-native-cspr.zh.md  tier1-demo.md  value-proposition.md
scripts/: check-cargo.mjs  check-ci.mjs  check-tsconfig.mjs  check-vault-wasm.mjs  check-workspace.mjs
uiux-design/: Caspilot Logo 集成方案.md  caspilot-console 页面的修改意见.md  caspilot-console.html  caspilot-developers 页面的修改意见.md  caspilot-developers.html  caspilot-intent-detail.html  caspilot-intents.html  caspilot-landing 页面的修改意见.md  caspilot-landing.html  caspilot-logo-display 页面的修改意见.md  caspilot-logo-display.html  caspilot-shell.html  caspilot-vault-detail 页面的修改意见.md  caspilot-vault-detail.html  caspilot-vaults 页面的修改意见.md  caspilot-vaults.html
(+154 files in other folders)
